--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -18,3 +18,14 @@ body, html {
 body {
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   color: #181818; }
+.page {
+  width:100%;
+  padding: 0;
+  margin: 0;
+}
+.main {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 16px;
+}
