--- a/src/components/Elements/Input/AppInput.scss
+++ b/src/components/Elements/Input/AppInput.scss
@@ -16,3 +16,20 @@
     box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.5);
   }
 }
+
+.checkable {
+  display: flex;
+  align-items: center;
+
+  label {
+    order: 2;
+    margin: 0;
+  }
+
+  input {
+    width: auto;
+    margin-right: 10px;
+    padding: 0;
+    border-radius: 0;
+  }
+}
