--- a/src/components/Elements/Input/AppInput.scss
+++ b/src/components/Elements/Input/AppInput.scss
@@ -1,3 +1,14 @@
+.input {
+
+  &--success {
+    box-shadow: 0 0 10px 2px rgba(0, 255, 0, 0.5);
+  }
+
+  &--error {
+    box-shadow: 0 0 10px 2px rgba(255, 0, 0, 0.5);
+  }
+}
+
 .input__label {
   display: block;
   margin-bottom: 5px;
@@ -30,6 +41,6 @@
     width: auto;
     margin-right: 10px;
     padding: 0;
-    border-radius: 0;
+    border-radius: 50%;
   }
 }
