--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,4 +2,29 @@
   background-color: #42b983;
   display: flex;
   width: 100%;
+  padding: 15px 0;
+}
+
+.header__nav {
+  width: 100%;
+}
+
+.nav__list {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav__item .nav__link {
+  color: #000000;
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+.nav__item--active .nav__link {
+  color: #FFFFFF;
+  font-weight: 700;
+  text-decoration: underline;
 }
